properly escape quote marks in man page